# frontend-geo-mcp

./: .env  .gitignore  .mcp-config.json  Dockerfile  Makefile  README.md  alembic.ini  config.env.example  docker-compose.yml  fastmcp.json  pyproject.toml  start_mcp_wsl.sh
database/: README.md
docs/: COMANDOS_PERSONALIZADOS.md  MCP_Frontend_Diseño_Arquitectura.md  MCP_Frontend_Python_FastMCP_Completo.md  SETUP.md  index.md  mcp-component-search-analysis.md  mcp-component-search-strategy.md
docs/tools/: TOOLS.md
migrations/: env.py
scripts/: diagnose_import_resolution.py  explore_db.py  recalculate_dependencies.py  run_mcp_tool.py  setup_local_db.sh  start_mcp_macos.sh  sync_projects.py  test.sh  test_feature_flags.py  test_local_db.py  test_mcp_tools.py  test_parser_validation.py  validate_barrel_exports.py
src/: models.py  server.py
tests/: README.md  __init__.py  conftest.py  test_barrel_export_advanced.py  test_barrel_export_integration.py  test_barrel_export_parser.py  test_component_repository_dependencies.py  test_component_utils.py  test_dependency_repository.py  test_feature_flag_detector.py  test_feature_flag_parser.py  test_feature_flag_repository.py  test_file_utils.py  test_formatter.py  test_hierarchy_utils.py  test_import_resolver.py  test_indexer.py  test_indexer_containers.py  test_models_integration.py  test_navigator_formatter.py  test_navigator_new_tools.py  test_output_formatter.py  test_parser.py  test_parser_containers.py  test_parser_imports.py  test_repositories.py  test_search_utils.py  test_time_utils.py  test_tools.py  test_utils.py
(+51 files in other folders)
